--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "homepage": "http://rayx81194.github.io/onizuka",
+  "homepage": "http://rayx81194.github.io/",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-t   "scripts": {
+  "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "dev": "vite",
